--- a/package.json
+++ b/package.json
@@ -2,25 +2,25 @@
   "name": "runner",
   "version": "1.0.0",
   "description": "CI runner that supports partial build based on file changes from last commit",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "jest"
+  },
+  "bin": {
+    "codebuild-dispatch": "dist/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/figlet": "^1.2.0",
-    "@types/inquirer": "^6.5.0",
+    "@types/aws-sdk": "^2.7.0",
     "@types/jest": "^26.0.0",
     "@types/js-yaml": "^3.12.4",
-    "chalker": "^1.2.0",
+    "aws-sdk": "^2.700.0",
+    "chalk": "^4.1.0",
     "commander": "^5.1.0",
-    "figlet": "^1.4.0",
-    "inquirer": "^7.2.0",
     "jest": "^26.0.1",
     "js-yaml": "^3.14.0",
     "prettier": "^2.0.5",
-    "simple-git": "^2.7.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5"
   },
