--- a/package.json
+++ b/package.json
@@ -1,30 +1,37 @@
 {
-  "name": "runner",
+  "license": "MIT",
   "version": "1.0.0",
+  "name": "codebuild-dispatcher",
+  "main": "codebuild-dispatcher",
+  "keywords": ["ci", "codebuild"],
+  "author": "Tom Lei <tom@beanworks.com>",
+  "homepage": "https://github.com/beanworks/codebuild-dispatcher",
   "description": "CI runner that supports partial build based on file changes from last commit",
-  "main": "dist/index.js",
-  "scripts": {
-    "test": "jest"
-  },
   "bin": {
     "codebuild-dispatch": "dist/index.js"
   },
-  "author": "",
-  "license": "ISC",
+  "scripts": {
+    "test": "jest",
+    "publish": "npm publish"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/beanworks/codebuild-dispatcher.git"
+  },
   "dependencies": {
-    "@types/aws-sdk": "^2.7.0",
-    "@types/jest": "^26.0.0",
-    "@types/js-yaml": "^3.12.4",
-    "aws-sdk": "^2.700.0",
     "chalk": "^4.1.0",
-    "commander": "^5.1.0",
-    "jest": "^26.0.1",
     "js-yaml": "^3.14.0",
     "prettier": "^2.0.5",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.5"
+    "aws-sdk": "^2.700.0",
+    "commander": "^5.1.0"
   },
   "devDependencies": {
-    "ts-jest": "^26.1.0"
+    "jest": "^26.0.1",
+    "ts-jest": "^26.1.0",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.5",
+    "@types/jest": "^26.0.0",
+    "@types/aws-sdk": "^2.7.0",
+    "@types/js-yaml": "^3.12.4"
   }
 }
